tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/gateway/client_protocol_-_http2_use_client_with_auto-http/to_b/_test_context/Gateway-VirtualService-DestinationRule.4047487723.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: echo-2-98059
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: b.echo-2-98059.svc.cluster.local
  namespace: echo-2-98059
spec:
  gateways:
  - gateway
  hosts:
  - b.echo-2-98059.svc.cluster.local
  http:
  - route:
    - destination:
        host: b.echo-2-98059.svc.cluster.local
        port:
          number: 81
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: use-client-protocol
  namespace: echo-2-98059
spec:
  host: b.echo-2-98059.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        useClientProtocol: true
    tls:
      mode: DISABLE
